# wordmaster

./: .gitignore  ACTIONS_NOT_WORKING_SOLUTION.md  AIDL_FIX_COMPLETE_SUMMARY.md  ANDROID_ENVIRONMENT_SETUP_COMPLETE.md  ANDROID_LOCAL_SETUP.md  APK_BUILD_FIX_GUIDE.md  APK_BUILD_GUIDE.md  APK_BUILD_PROCESS.md  APK_BUILD_START_GUIDE.md  BEEWARE_APK_BUILD_GUIDE.md  BEEWARE_BUILD_TEST_REPORT.md  BUILD_APK_GUIDE.md  BUILD_ERROR_TROUBLESHOOTING.md  BUILD_INFO.md  BUILD_MONITORING_REPORT.md  BUILD_STATUS_REPORT.md  BUILD_STATUS_UPDATE.md  CLOUD_APK_BUILD_GUIDE.md  COMPLETE_APK_GUIDE.md  COMPLETE_CONVERSATION_SUMMARY.md  CONVERSATION_SUMMARY.md  CORRECT_USERNAME_PUSH_SOLUTION.md  DOCKER_SETUP_GUIDE.md  Dockerfile  FINAL_GITHUB_PUSH_STEPS.md  FINAL_GIT_PUSH_GUIDE.md  FINAL_PROJECT_STATUS.md  GITHUB_ACTIONS_BUILD_GUIDE.md  GITHUB_ACTIONS_BUILD_STEPS.md  GITHUB_CONNECTION_ERROR_FIX.md  GITHUB_CONNECTION_FIX.md  GITHUB_DESKTOP_FIX.md  GITHUB_DESKTOP_GUIDE.md  GITHUB_QUICK_HELP.md  GITHUB_SETUP.md  GIT_CONNECTION_SOLUTION.md  GIT_INSTALLATION_GUIDE.md  GIT_INSTALL_AND_PUSH_GUIDE.md  GIT_INSTALL_COMPLETE_CHECK.md  GIT_MMAP_ERROR_SOLUTION.md  (+81 more)
.briefcase/wordmaster/dev/: venv_path
.github/workflows/: build-android-minimal.yml  build-android-safe.yml  build-android.yml  build-wordmaster-apk.yml  debug.yml  test-workflow.yml
models/: database.py  dictionary.py  learning.py  user.py  word.py
src/wordmaster/: __init__.py  app.py  simple_test.py  simple_ui_test.py  test_app.py
src/wordmaster/utils/: audio_beeware.py  speech_recog_beeware.py
utils/: audio.py  speech_recog.py
